--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -90,10 +90,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <a class="page-scroll hvr-underline-from-center" href="#big-image">Nous</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#our-work">Nos outils</a>
+                <a class="page-scroll hvr-underline-from-center" href="#our-work">Vos outils</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#services">Notre travail</a>
+                <a class="page-scroll hvr-underline-from-center" href="#services">Notre expertise</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="#offres">Nos offres</a>
@@ -145,25 +145,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <!-- Image Section
 ================================================== -->
 <section id="big-image" class="image-section"
-         style='background: url(./assets/images/image-section.jpg) no-repeat 50% 50% fixed;
-                border-top: 20px solid black;
-                border-bottom: 10px solid black;
-                '>
-    <div class="container-right" style='float: right; margin-right: 3em;'>
-                    <br>
-                    <br>
-                    <h3 class="wow fadeIn animated">
-                        Nous créons des <span> plateformes web et mobiles </span> avec la <span> visibilité </span> dont vous avez besoin
-                    </h3>
-                    <br>
-                    <br>
-    </div>
-</section>
-
-<section id="big-image" class="image-section"
          style='background: url(./assets/images/layer-2.png) no-repeat 50% 50% fixed;
                 border-top: 10px solid black;
-                border-bottom: 10px solid black;
+                
                 '>
     <div class="container-left" style='float: left; margin-left: 3em;'>
                     <br>
@@ -177,10 +161,28 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 </section>
 
 <section id="big-image" class="image-section"
+         style='background: url(./assets/images/image-section.jpg) no-repeat 50% 50% fixed;
+                border-top: 10px solid black;
+
+                '>
+    <div class="container-right" style='float: right; margin-right: 3em;'>
+                    <br>
+                    <br>
+                    <h3 class="wow fadeIn animated">
+                        Nous créons des <span> plateformes web et mobiles </span> avec la <span> visibilité </span> dont vous avez besoin
+                    </h3>
+                    <br>
+                    <br>
+    </div>
+</section>
+
+
+
+<section id="big-image" class="image-section"
          style='background: url(./assets/images/layer-3.png) no-repeat 50% 50% fixed;
                 border-top: 10px solid black;
                 '>
-    <div class="container-right" style='float: right; margin-right: 3em;'>
+    <div class="container-right" style='float: float: left; margin-left: 3em;'>
                     <br>
                     <br>
                     <h3 class="wow fadeIn animated">
@@ -199,7 +201,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 see-work">
-                <h2 class="wow fadeInLeft animated">Découvrez nos outils <span>sur-mesure</span> </h2>
+                <h2 class="wow fadeInLeft animated">Découvrez <span>vos</span> outils <span>sur-mesure</span> </h2>
             </div>
             <!-- /.see-work -->
 
@@ -562,7 +564,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                 <div class="contact-content">
                     <div class="contact-info">
-                        <p class="contact-header">Nos locaux : <span> Sudri'cub</span></p>
+                        <p class="contact-header">Contactez<span> Nous</span> :</p>
                         <div class="info-line">
                             <div class="info-icon wow fadeIn animated">
                                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
@@ -588,25 +590,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             </div>
                         </div>
 
-                        <div class="info-line">
-                            <div class="info-icon wow fadeIn animated">
-                                <i class="fa fa-address-card-o" aria-hidden="true"></i>
-                            </div>
-                            <div class="info-text wow fadeIn animated">
-                                <p>38 rue Molière</p>
-                            </div>
-                        </div>
-
-                        <div class="info-line">
-                            <div class="info-icon wow fadeIn animated">
-                                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                            </div>
-                            <div class="info-text wow fadeIn animated">
-                                <p>94200 Ivry sur Seine</p>
-                            </div>
-                        </div>
-                        <br>
-                        <br>
 
                         <div class="bottom-info">
                             <h4 class="wow fadeIn animated"><span>Retrouvez-nous</span> sur les réseaux</h4>
