--- a/particle_dark/offres.html
+++ b/particle_dark/offres.html
@@ -65,10 +65,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <a class="page-scroll hvr-underline-from-center" href="index.html#three-points">Nous</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="index.html#our-work">Nos outils</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#our-work">Vos outils</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="index.html#services">Notre travail</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#services">Notre expertise</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="index.html#offres">Nos offres</a>
