--- a/particle_dark/file-dattente.html
+++ b/particle_dark/file-dattente.html
@@ -72,10 +72,10 @@
                 <a class="page-scroll hvr-underline-from-center" href="index.html#three-points">Nous</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="index.html#our-work">Nos outils</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#our-work">Vos outils</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="index.html#services">Notre travail</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#services">Notre expertise</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="index.html#offres">Nos offres</a>
