reduce image size & starts to modify links to pages

--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -197,7 +197,7 @@
     <!-- /.container -->
 </section>
 <!-- /.service-section -->
-<section id="service-details" class="services-section">
+<section id="service-details-2" class="services-section">
 
     <div class="container">
 
