--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -207,7 +207,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12 portfolio-images">
                 <div class="col-md-3 col-sm-6 col-xs-6">
-                    <div class="portfolio-img first" onClick="window.location.href='cartographie.html';">
+                    <div class="portfolio-img first" onClick="window.location.href='cartographie.html#service-details';">
                             <img class="img-responsive" src="assets/images/carto-icon.png"
                                  alt="porftofilio thumbnail"/>
                             <div class="sweep-left"></div>
@@ -216,9 +216,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                     <div class="sweep-content">
 
 
-                                        <h3><a href="cartographie.html">Cartographie interactive</a></h3>
+                                        <h3><a href="cartographie.html#service-details">Cartographie interactive</a></h3>
                                         <p>Les visiteus en immersion dans votre univers</p>
-                                        <a href="cartographie.html">
+                                        <a href="cartographie.html#service-details">
                                         <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                       </a>
                                     </div>
@@ -252,7 +252,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </div>
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
-                    <div class="portfolio-img second" onClick="window.location.href='cartographie.html';">
+                    <div class="portfolio-img second" onClick="window.location.href='cartographie.html#service-details-2';">
                             <img class="img-responsive" src="assets/images/parcours-icon.png"
                                  alt="porftofilio thumbnail"/>
                             <div class="sweep-left"></div>
@@ -261,9 +261,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                     <div class="sweep-content">
 
 
-                                        <h3><a href="cartographie.html">Orientation sur-mesure</a></h3>
+                                        <h3><a href="cartographie.html#service-details-2">Orientation sur-mesure</a></h3>
                                         <p>Le visiteur personnalise son parcours en fonction de ses envies</p>
-                                        <a href="cartographie.html">
+                                        <a href="cartographie.html#service-details-2">
                                         <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                       </a>
                                     </div>
