fix responsive and add correct links for pages

--- a/particle_dark/communication.html
+++ b/particle_dark/communication.html
@@ -229,28 +229,24 @@
 <!-- Contact Section
 ================================================== -->
 <section id="contact" class="contact-section">
-
     <div class="container">
 
         <div class="row">
 
             <div class="col-md-12">
 
-                <div class="contact-headline">
-                    <h3 class="wow fadeIn animated"><span>Contactez-nous</span></h3>
 
-                </div>
                 <!-- /.contact-headline -->
 
                 <div class="contact-content">
                     <div class="contact-info">
-                        <p class="contact-header">Nos locaux : <span> Sudri'cub</span></p>
+                        <p class="contact-header">Contactez<span> Nous</span> :</p>
                         <div class="info-line">
                             <div class="info-icon wow fadeIn animated">
                                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
                             </div>
                             <div class="info-text wow fadeIn animated">
-                                <p>contact@morman.fr</p>
+                                <a href="mailto:contact@morman.fr">contact@morman.fr</a>
                             </div>
                         </div>
                         <div class="info-line">
@@ -270,23 +266,6 @@
                             </div>
                         </div>
 
-                        <div class="info-line">
-                            <div class="info-icon wow fadeIn animated">
-                                <i class="fa fa-address-card-o" aria-hidden="true"></i>
-                            </div>
-                            <div class="info-text wow fadeIn animated">
-                                <p>38 rue Molière</p>
-                            </div>
-                        </div>
-
-                        <div class="info-line">
-                            <div class="info-icon wow fadeIn animated">
-                                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                            </div>
-                            <div class="info-text wow fadeIn animated">
-                                <p>94200 Ivry sur Seine</p>
-                            </div>
-                        </div><br><br>
 
                         <div class="bottom-info">
                             <h4 class="wow fadeIn animated"><span>Retrouvez-nous</span> sur les réseaux</h4>
@@ -316,7 +295,7 @@
                     <div class="contact-form">
                         <h4 class="wow fadeIn animated">Envoyez nous <span>un message...</span></h4>
 
-                        <form method="post">
+                        <form method="post" action="contact.php" >
                             <div class="form-group wow fadeIn animated">
                                 <label for="name">Votre Nom - Prénom - Société : </label>
                                 <input type="text" id="name" name="name" class="form-control">
