--- a/particle_dark/offres.html
+++ b/particle_dark/offres.html
@@ -351,13 +351,13 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                 <div class="contact-content">
                     <div class="contact-info">
-                        <p class="contact-header">Nos locaux : <span> Sudri'cub</span></p>
+                        <p class="contact-header">Contactez<span> Nous</span> :</p>
                         <div class="info-line">
                             <div class="info-icon wow fadeIn animated">
                                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
                             </div>
                             <div class="info-text wow fadeIn animated">
-                                <p>contact@morman.fr</p>
+                                <a href="mailto:contact@morman.fr">contact@morman.fr</a>
                             </div>
                         </div>
                         <div class="info-line">
@@ -377,25 +377,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             </div>
                         </div>
 
-                        <div class="info-line">
-                            <div class="info-icon wow fadeIn animated">
-                                <i class="fa fa-address-card-o" aria-hidden="true"></i>
-                            </div>
-                            <div class="info-text wow fadeIn animated">
-                                <p>38 rue Molière</p>
-                            </div>
-                        </div>
-
-                        <div class="info-line">
-                            <div class="info-icon wow fadeIn animated">
-                                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                            </div>
-                            <div class="info-text wow fadeIn animated">
-                                <p>94200 Ivry sur Seine</p>
-                            </div>
-                        </div>
-                        <br>
-                        <br>
 
                         <div class="bottom-info">
                             <h4 class="wow fadeIn animated"><span>Retrouvez-nous</span> sur les réseaux</h4>
