--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -114,7 +114,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <video autoplay loop poster="assets/video/1_caroussel.jpg" id="bgvid">
             <source src="assets/video/caroussel.webm" type="video/webm">
             <source src="assets/video/caroussel.ogv" type="video/ogg">
-            <source src="assets/video/caroussel.mp4" type="video/mp4">
+            <source src="assets/video/caroussel_1.mp4" type="video/mp4">
         </video>
     </div>
 
@@ -147,7 +147,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <section id="big-image" class="image-section"
          style='background: url(./assets/images/layer-2.png) no-repeat 50% 50% fixed;
                 border-top: 10px solid black;
-                
+
                 '>
     <div class="container-left" style='float: left; margin-left: 3em;'>
                     <br>
