modif valeur ajouté

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -201,7 +201,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 see-work">
-                <h2 class="wow fadeInLeft animated">Découvrez <span>vos</span> outils <span>sur-mesure</span> </h2>
+                <h2 class="wow fadeInLeft animated">Notre<span> valeur ajoutée</span></h2>
             </div>
             <!-- /.see-work -->
 
@@ -287,8 +287,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="sweep-layer">
                                 <div class="sweep-content">
 
-                                    <h3><a href="communication.html">Fidélisation et Communication éclair</a></h3>
-                                    <p>La puissance du E-marketing pour vos clients</p>
+                                    <h3><a href="communication.html">Communication éclair</a></h3>
+                                    <p>La puissance du E-marketing pour fidéliser vos clients</p>
                                     <a href="communication.html">
                                     <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                   </a>
@@ -357,7 +357,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <div class="service" style="visibility: hidden;" id="service1">
                         <div class="text">
-                            <h4>Des outils adaptés à tous vos supports</h4>
+                            <h4>Nos experts en design adapteront vos plateformes sur tous les supports</h4>
 
                         </div>
                         <div class="icons">
@@ -370,7 +370,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <div class="service" style="visibility: hidden;" id="service2">
                         <div class="text">
-                            <h4>Référencement naturel pour une notoriété améliorée</h4>
+                            <h4>Des spécialistes en référencement vous accompagneront  </h4>
 
                         </div>
                         <div class="icons">
@@ -388,7 +388,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <img src="assets/images/icon-like.png" alt="iphone">
                         </div>
                         <div class="text">
-                            <h4>Des fonctionnalités concues pour vous et vos clients</h4>
+                            <h4>Nos ingénieurs développent des fonctionnalités concues pour vous et vos clients</h4>
 
 
                             <br>
@@ -402,7 +402,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <img src="assets/images/icon-business.png" alt="iphone">
                         </div>
                         <div class="text">
-                            <h4>Des outils orientés business de gestion et de relances clients</h4>
+                            <h4>Nos experts en intelligence numérique ont mis au point des outils orientés business de gestion</h4>
 
 
                         </div>
