--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -324,7 +324,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <br>
                     <h3 class="wow fadeIn animated">
-                        "Don’t be afraid to <span>get creative</span> and <span>experiment</span> with your marketing."
+                        "N'ayez pas peur, <span>soyez créatif</span> et <span>expérimentez</span> votre marketing."
                     </h3>
                     <p class="wow fadeIn animated">Mike Volpe</p>
                     <br>
