force favicon refresh

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -10,7 +10,7 @@
 
     <title>Amuseo | Concepteurs d'expériences digitales pour parcs et musées</title>
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700%7CTitillium+Web:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
