--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -217,7 +217,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
                                         <h3><a href="cartographie.html#service-details">Cartographie interactive</a></h3>
-                                        <p>Les visiteus en immersion dans votre univers</p>
+                                        <p>Vos visiteurs en immersion dans votre univers</p>
                                         <a href="cartographie.html#service-details">
                                         <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated">En savoir plus</button>
                                       </a>
@@ -324,7 +324,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <br>
                     <h3 class="wow fadeIn animated">
-                        "N'ayez pas peur, <span>soyez créatif</span> et <span>expérimentez</span> votre marketing."
+                        "N'ayez pas peur d'<span>être créatif</span> et d'<span>expérimenter</span> dans votre marketing."
                     </h3>
                     <p class="wow fadeIn animated">Mike Volpe</p>
                     <br>
@@ -571,22 +571,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             </div>
                             <div class="info-text wow fadeIn animated">
                                 <a href="mailto:contact@morman.fr">contact@morman.fr</a>
-                            </div>
-                        </div>
-                        <div class="info-line">
-                            <div class="info-icon wow fadeIn animated">
-                                <i class="fa fa-phone" aria-hidden="true"></i>
-                            </div>
-                            <div class="info-text wow fadeIn animated">
-                                <p>(+33) 6.34.68.32.35</p>
-                            </div>
-                        </div>
-                        <div class="info-line">
-                            <div class="info-icon wow fadeIn animated">
-                                <i class="fa fa-phone" aria-hidden="true"></i>
-                            </div>
-                            <div class="info-text wow fadeIn animated">
-                                <p>(+33) 6.78.12.23.91</p>
                             </div>
                         </div>
 
