--- a/particle_dark/communication.html
+++ b/particle_dark/communication.html
@@ -10,7 +10,7 @@
 
     <title>Amuseo | Concepteurs d'expériences digitales pour parcs et musées</title>
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700%7CTitillium+Web:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
@@ -249,22 +249,7 @@
                                 <a href="mailto:contact@morman.fr">contact@morman.fr</a>
                             </div>
                         </div>
-                        <div class="info-line">
-                            <div class="info-icon wow fadeIn animated">
-                                <i class="fa fa-phone" aria-hidden="true"></i>
-                            </div>
-                            <div class="info-text wow fadeIn animated">
-                                <p>(+33) 6.34.68.32.35</p>
-                            </div>
-                        </div>
-                        <div class="info-line">
-                            <div class="info-icon wow fadeIn animated">
-                                <i class="fa fa-phone" aria-hidden="true"></i>
-                            </div>
-                            <div class="info-text wow fadeIn animated">
-                                <p>(+33) 6.78.12.23.91</p>
-                            </div>
-                        </div>
+                        
 
 
                         <div class="bottom-info">
